<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center_horizontal"
            android:text="@string/pass_recovery"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/email"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/input_form"
            android:ems="10"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/mBtn_reg"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/button"
            android:fontFamily="@font/nunitosemibold"
            android:padding="10dp"
            android:text="@string/contin"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center_horizontal"
            android:text="@string/create_new_acc"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center_horizontal"
            android:text="@string/send_support"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center_horizontal"
            android:text="@string/back"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>