<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView_auth"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/auth"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/email"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/input_form"
            android:ems="10"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/password"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/input_form"
            android:ems="10"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:background="@drawable/google" />

            <Button
                android:id="@+id/button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/instagram" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:fontFamily="@font/nunitosemibold"
                android:text="@string/forgot_pass"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <Button
            android:id="@+id/mBtn_reg"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/button"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/enter"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/first_visit"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/registration_link"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="end"
            android:text="@string/exit"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>