<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView_auth"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/registration"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/name"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTextPersonName"

            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/input_form"
            android:ems="10"
            android:fontFamily="@font/nunitosemibold"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/phone"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText

                android:id="@+id/country_code_text"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/input_form"
                android:ems="10"
                android:fontFamily="@font/nunitosemibold"
                android:gravity="center"
                android:hint="+7"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_desc"
                android:layout_width="wrap_content" />

            <EditText
                android:id="@+id/phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/input_form"
                android:ems="10"
                android:fontFamily="@font/nunitosemibold"
                android:gravity="center"
                android:hint="Your Phone Number"
                android:inputType="phone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/country_code_text"
                app:layout_constraintTop_toBottomOf="@+id/login_desc" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_form_feedback"
            android:layout_width="347dp"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunitosemibold"
            android:text="Working . . ."
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/generate_btn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:background="@drawable/google" />

            <Button
                android:id="@+id/button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/instagram" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/mBtn_reg"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:fontFamily="@font/nunitosemibold"
            android:padding="10dp"
            android:text="@string/reg_btn"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>